--- a/.verb.md
+++ b/.verb.md
@@ -5,11 +5,6 @@
 ## Install
 {%= include("install") %}
 
-## Run tests
-
-```bash
-npm test
-```
 
 ## Usage
 
@@ -45,6 +40,14 @@ omit()
 //=> {}
 ```
 
+## Runing tests
+
+Install dev dependencies:
+
+```bash
+npm i -d && npm test
+```
+
 ## Author
 {%= include("author") %}
 
@@ -74,7 +77,7 @@ Other projects that I maintain:
 
 
 ## License
-{%= copyright() %}
+{%= copyright({year: 2014}) %}
 {%= license() %}
 
 ***
