adds filter function to docs

--- a/.verb.md
+++ b/.verb.md
@@ -40,8 +40,33 @@ omit()
 //=> {}
 ```
 
+### Filter function
+
+An optional filter function may be passed as the last argument, with or without keys passed on the arguments:
+
+**filter on keys**
+
+```js
+var res = omit({a: 'a', b: 'b', c: 'c'}, function (val, key) {
+  return key === 'a';
+});
+//=> {a: 'a'}
+```
+
+**filter on values**
+
+```js
+var fn = function() {};
+var obj = {a: 'a', b: 'b', c: fn};
+
+var res = omit(obj, ['a'], function (val, key) {
+  return typeof val !== 'function';
+});
+//=> {b: 'b'}
+```
+
 ### Other awesome javascript/node.js utils
-{%= related(['object.filter', 'object.pick', 'object.pluck', 'object.reduce', 'object.defaults']) %}
+{%= related(verb.related.list, {remove: name}) %}
 
 ## Runing tests
 {%= include("tests") %}
